UI/UX issues: 1: SignUp/SignIn widget aligned at the centre 2: Method type, proper refquest format added to display Authorization/Token Requests Preview

--- a/angular/src/app/loginWidget/loginWidget.component.css
+++ b/angular/src/app/loginWidget/loginWidget.component.css
@@ -1,3 +1,7 @@
 #cyberark-login {
- line-height: 1 !important;
+  line-height: 1 !important; 
+}
+
+::ng-deep .login-container {
+  margin-top: 100px !important;
 }
